force-app/main/default/objects/NEILON__File_Version__c/NEILON__File_Version__c.object-meta.xml
<CustomObject>
    <description>Versions of files.</description>
    <label>S3-File Version</label>
    <nameField>
        <displayFormat>FV-{000000}</displayFormat>
        <label>S3-File Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3-File Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>