force-app/main/default/objects/NEILON__File_Version__c/fields/NEILON__Description__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Description__c</fullName>
    <label>What Changed?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>