force-app/main/default/objects/NEILON__File_Version__c/fields/NEILON__File__c.field-meta.xml
<CustomField>
    <fullName>NEILON__File__c</fullName>
    <label>File</label>
    <referenceTo>NEILON__File__c</referenceTo>
    <relationshipLabel>S3-File Versions</relationshipLabel>
    <relationshipName>S3_File_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>