force-app/main/default/objects/NEILON__File_Version__c/fields/NEILON__Last_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Last_Uploaded_Date__c</fullName>
    <label>Last Uploaded Date</label>
    <type>DateTime</type>
</CustomField>