force-app/main/default/objects/NEILON__File_Version__c/fields/NEILON__Version_Id__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Version_Id__c</fullName>
    <label>Version Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>