force-app/main/default/objects/NEILON__File_Version__c/validationRules/NEILON__File_Size_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NEILON__File_Size_Validation</fullName>
    <active>true</active>
    <description>File Size cannot be updated once file is created.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED( NEILON__Size__c ))</errorConditionFormula>
    <errorDisplayField>NEILON__Size__c</errorDisplayField>
    <errorMessage>Size cannot be updated manually. It&apos;s a system generated field.</errorMessage>
</ValidationRule>