force-app/main/default/objects/NEILON__File_Version__c/validationRules/NEILON__Version_Id_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NEILON__Version_Id_Validation</fullName>
    <active>true</active>
    <description>Version Id cannot be updated once file is created.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED( NEILON__Version_Id__c ))</errorConditionFormula>
    <errorDisplayField>NEILON__Version_Id__c</errorDisplayField>
    <errorMessage>Version Id cannot be updated manually. It&apos;s a system generated field.</errorMessage>
</ValidationRule>